# patch-planner

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: scenario1.yaml  scenario2.yaml  scenario3.yaml
docs/: architecture.md  architecture_summary.md  article.md  presentation.html  presentation.md
docs/css/: presentation.css
docs/js/: presentation.js
scripts/: run.py  run_comparison.py  visualize_results.py
src/patchplanner/: cli.py  infra_loader.py  models.py
src/patchplanner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/patchplanner/planner/: __init__.py  base.py  batch_rolling.py  bigbang.py  bluegreen.py  canary.py  dep_greedy.py  hybrid.py  rolling.py
src/patchplanner/simulator/: constraints.py  engine.py  metrics.py  reporter.py
tests/: test_constraints.py  test_planner.py  test_simulator.py  test_strategies.py
