[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchplanner"
version = "0.1.0"
description = "Patch planning simulator for critical infrastructures"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "networkx>=3.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
